<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="textView" translatable="false">1</string>
    <string name="order">ORDER</string>
    <string name="price">Order Summary</string>
    <string name="price_value" translatable="false">0</string>
    <string name="decrease" translatable="false">-</string>
    <string name="increase" translatable="false">+</string>
    <string name="whipped">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="customer_name">Name</string>
</resources>
